修复bug1